# costguard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.server  README.md  SECURITY.md  SUPPORT.md  book.toml  compose.yaml  deny.toml  pyproject.toml  requirements-judge.txt
.github/: CODEOWNERS  dependabot.yml  release_allowed_signers
.github/actions/costguard/: action.yml
.github/workflows/: benchmark.yml  ci.yml  costguard-pr.yml  release.yml
crates/costguard-cli/: Cargo.toml
crates/costguard-cli/src/: args.rs  commands.rs  main.rs
crates/costguard-cli/tests/: cli.rs  cli_cost.rs  cli_doctor.rs  cli_general.rs  cli_init.rs  cli_policy.rs  cli_scan.rs
crates/costguard-cli/tests/common/: mod.rs
crates/costguard-core/: Cargo.toml
crates/costguard-core/src/: analysis_report.rs  base_replay.rs  baseline.rs  branch_scan.rs  config.rs  context.rs  dbt_graph.rs  dbt_load.rs  doctor.rs  framework_snapshot.rs  gates.rs  git.rs  governance.rs  init.rs  lib.rs  metadata_report.rs  owners.rs  pipeline.rs  rocky.rs  scan.rs  scan_plan.rs  sql_analysis.rs  state_diff.rs  waivers.rs
crates/costguard-core/tests/: benchmark.rs  corpus.rs  dialects.rs  enterprise_policy.rs  pr_cost_impact.rs  pr_replay.rs  scan_regression.rs  signed_policy.rs  stale_manifest.rs
crates/costguard-core/tests/common/: mod.rs
crates/costguard-cost/: Cargo.toml
crates/costguard-cost/src/: annotate.rs  attribution.rs  catalog.rs  config.rs  csv.rs  estimate.rs  format.rs  import.rs  lib.rs  model_cost.rs  multipliers.rs  observations.rs  pricing.rs  query_history.rs  units.rs  volume.rs
crates/costguard-dbt/: Cargo.toml
crates/costguard-dbt/src/: graph.rs  lib.rs  manifest.rs  project_config.rs  sql_features.rs  yaml.rs
crates/costguard-diagnostics/: Cargo.toml
crates/costguard-diagnostics/src/: lib.rs
crates/costguard-git/: Cargo.toml
crates/costguard-git/src/: lib.rs
crates/costguard-output/: Cargo.toml
crates/costguard-output/src/: github.rs  lib.rs  markdown.rs  sarif.rs  text.rs
crates/costguard-platform/: Cargo.toml
crates/costguard-platform/src/: lib.rs  trino.rs
crates/costguard-policy/: Cargo.toml
crates/costguard-policy/src/: compile.rs  governance.rs  lib.rs  resolve.rs  rules.rs  sign.rs  types.rs
crates/costguard-project/: Cargo.toml
crates/costguard-protocol/: Cargo.toml
crates/costguard-rules/: Cargo.toml
crates/costguard-rules/src/: cost_patterns.rs  cross_file.rs  dbt.rs  evidence.rs  expressions.rs  helpers.rs  lib.rs  metadata.rs  python.rs  registry.rs  sql_shape.rs  tests.rs
crates/costguard-scanner/: Cargo.toml
crates/costguard-scanner/src/: lib.rs
crates/costguard-server/: Cargo.toml
crates/costguard-server/migrations/: 0001_enterprise_foundation.sql
crates/costguard-server/src/: main.rs
crates/costguard-server/templates/: dashboard.html
crates/costguard-sql/: Cargo.toml
crates/costguard-sql/src/: lib.rs  platform.rs  strip.rs  trino.rs
crates/costguard-sql/src/features/: ast.rs  comma_join.rs  join_heuristics.rs  join_predicates.rs  mod.rs  regex.rs  subquery.rs
crates/costguard-sql/src/parse/: compiled.rs  mod.rs  normalize.rs
crates/costguard-sql/tests/: lib_tests.rs
docs/book/: README.md  SUMMARY.md  glossary.md
docs/design/: benchmark-calibration.md  classification-metrics.md  cost-model.md  llm-judge-irr.md  manual-rule-review.md  pr-check-primary-workflow.md  product-scope.md  rule-tp-coverage.md  spellbook-stress-test.md  spellbook-top10-cost-review.md
docs/rules/: SQLCOST001.md  SQLCOST002.md  SQLCOST003.md  SQLCOST004.md  SQLCOST005.md  SQLCOST006.md  SQLCOST007.md  SQLCOST008.md  SQLCOST009.md  SQLCOST010.md  SQLCOST011.md  SQLCOST012.md  SQLCOST013.md  SQLCOST014.md  SQLCOST015.md  SQLCOST016.md  SQLCOST017.md  SQLCOST018.md  SQLCOST019.md  SQLCOST020.md  SQLCOST021.md  SQLCOST022.md  SQLCOST023.md  SQLCOST024.md  SQLCOST025.md  SQLCOST026.md  SQLCOST027.md  SQLCOST028.md  SQLCOST029.md  SQLCOST030.md  SQLCOST031.md  SQLCOST032.md  SQLCOST033.md  SQLCOST034.md  SQLCOST035.md  SQLCOST036.md  SQLCOST037.md  SQLCOST038.md  SQLCOST039.md  SQLCOST040.md  (+7 more)
scripts/: audit_compiled_parse_failures.py  benchmark_external_repo.py  bucket_rule_diagnostics.py  build_benchmark_evidence.py  build_eval_dataset.py  build_llm_judge_labels.py  calibrate_cost_model.py  check_docs.py  ci_local.sh  configure_github_release.py  costguard_tooling.py  dbt_compile_for_costguard.py  eval_irr.py  eval_lib.py  eval_metrics.py  generate_precision_tiers.py  generate_recall_corpus.py  generate_rule_docs.py  generate_sbom.py  generate_synthetic_dbt.py  install.sh  llm_judge_lib.py  lock_python_deps.py  package_release_target.py  pre_commit_costguard.sh  precision_triage.py  publish_release_local.py  publish_release_local.sh  recall_report.py  release_check.py  release_consumer_smoke.py  release_packaging.py  rule_tp_census.py  scale_check.py  server_image_check.py  smoke_release_asset.py  support_matrix.py  top_findings_review.py  validate_fp_registry.py  validate_workspace_deps.py  (+3 more)
scripts/tests/: test_action_consumer.py  test_action_contract.py  test_benchmark_compare.py  test_benchmark_cost_configs.py  test_bucket_rule_diagnostics.py  test_calibrate_cost_model.py  test_check_docs.py  test_configure_github_release.py  test_dbt_compile_for_costguard.py  test_enterprise_release.py  test_eval_irr.py  test_eval_metrics.py  test_gate_scripts.py  test_generated_evidence.py  test_install_sh.py  test_lock_python_deps.py  test_pre_commit_costguard.py  test_precision_triage.py  test_publish_release_local.py  test_recall_report.py  test_release_check.py  test_rule_tp_census.py  test_support_matrix.py  test_validate_workspace_deps.py  test_verify_ci_history.py  test_verify_release_assets.py
tests/benchmarks/: eval_labels.toml  fp_registry.toml  irr_report.json  judge_fewshots.toml  llm_judge_manifest.toml  precision_tiers.toml  repos.toml  rule_tp_evidence.json
tests/fixtures/: balancer_balances_compiled.sql  min_confidence_low_comma.sql
(+305 files in other folders)
