[workspace]
members = [
    "crates/costguard-cli",
    "crates/costguard-protocol",
    "crates/costguard-policy",
    "crates/costguard-core",
    "crates/costguard-scanner",
    "crates/costguard-sql",
    "crates/costguard-dbt",
    "crates/costguard-rules",
    "crates/costguard-diagnostics",
    "crates/costguard-output",
    "crates/costguard-git",
    "crates/costguard-platform",
    "crates/costguard-cost",
    "crates/costguard-server",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/hypertrial/costguard"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
askama = "0.14"
axum = { version = "0.8", features = ["form", "json", "macros"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
ignore = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
globset = "0.4"
hmac = "0.12"
http = "1"
jsonwebtoken = "9"
prometheus = "0.14"
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = "1"
regex = "1"
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
sqlparser = "0.51"
subtle = "2"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["catch-panic", "limit", "request-id", "sensitive-headers", "set-header", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
