[workspace]
members = [
    "crates/costguard-cli",
    "crates/costguard-protocol",
    "crates/costguard-policy",
    "crates/costguard-core",
    "crates/costguard-scanner",
    "crates/costguard-sql",
    "crates/costguard-dbt",
    "crates/costguard-rules",
    "crates/costguard-diagnostics",
    "crates/costguard-output",
    "crates/costguard-git",
    "crates/costguard-platform",
    "crates/costguard-cost",
]
resolver = "2"

[workspace.package]
version = "2.0.0-rc.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/hypertrial/costguard"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
ignore = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
globset = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = "1"
regex = "1"
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sqlparser = "0.51"
subtle = "2"
tempfile = "3"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
