[workspace]
members = [
    "crates/costguard-cli",
    "crates/costguard-protocol",
    "crates/costguard-policy",
    "crates/costguard-core",
    "crates/costguard-scanner",
    "crates/costguard-sql",
    "crates/costguard-dbt",
    "crates/costguard-project",
    "crates/costguard-rules",
    "crates/costguard-diagnostics",
    "crates/costguard-output",
    "crates/costguard-cost",
]
resolver = "2"

[workspace.package]
version = "2.7.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/hypertrial/costguard"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
ignore = "0.4"
ed25519-dalek = { version = "3", features = ["rand_core"] }
globset = "0.4"
getrandom = { version = "0.4", features = ["sys_rng"] }
rayon = "1"
regex = "1"
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
sqlparser = "0.62"
tempfile = "3"
toml = "1.1"
