[package]
name = "costguard-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "costguard"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
costguard-core = { path = "../costguard-core" }
costguard-diagnostics = { path = "../costguard-diagnostics" }
costguard-output = { path = "../costguard-output" }
costguard-rules = { path = "../costguard-rules" }
costguard-sql = { path = "../costguard-sql" }

[dev-dependencies]
tempfile.workspace = true
