[package]
name = "costguard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "costguard"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
costguard-core = { path = "../costguard-core" }
costguard-cost = { path = "../costguard-cost" }
costguard-diagnostics = { path = "../costguard-diagnostics" }
costguard-output = { path = "../costguard-output" }
costguard-policy = { path = "../costguard-policy" }
costguard-protocol = { path = "../costguard-protocol" }
costguard-rules = { path = "../costguard-rules" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
chrono.workspace = true
tempfile.workspace = true
serde_json.workspace = true
