[package]
name = "costguard-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
costguard-cost = { path = "../costguard-cost" }
costguard-dbt = { path = "../costguard-dbt" }
costguard-diagnostics = { path = "../costguard-diagnostics" }
costguard-git = { path = "../costguard-git" }
costguard-platform = { path = "../costguard-platform" }
costguard-rules = { path = "../costguard-rules" }
costguard-scanner = { path = "../costguard-scanner" }
costguard-sql = { path = "../costguard-sql" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
