[package]
name = "costguard-core"
description = "Scan orchestration, configuration, and baseline management for Costguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
costguard-cost = { path = "../costguard-cost" }
costguard-dbt = { path = "../costguard-dbt" }
costguard-diagnostics = { path = "../costguard-diagnostics" }
costguard-policy = { path = "../costguard-policy" }
costguard-protocol = { path = "../costguard-protocol" }
costguard-rules = { path = "../costguard-rules" }
costguard-scanner = { path = "../costguard-scanner" }
costguard-sql = { path = "../costguard-sql" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
