[package]
name = "costguard-cost"
description = "Advisory lognormal cost estimation for Costguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
costguard-dbt = { path = "../costguard-dbt" }
costguard-diagnostics = { path = "../costguard-diagnostics" }
costguard-project = { path = "../costguard-project" }
costguard-protocol = { path = "../costguard-protocol" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
toml.workspace = true
