[package]
name = "costguard-dbt"
description = "dbt manifest, YAML, and project config parsing for Costguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
costguard-project = { path = "../costguard-project" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile.workspace = true
