[package]
name = "costguard-diagnostics"
description = "Diagnostic types, severity, and suppression handling for Costguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
costguard-protocol = { path = "../costguard-protocol" }
schemars.workspace = true
serde.workspace = true
sha2.workspace = true
