[package]
name = "costguard-output"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
costguard-core = { path = "../costguard-core" }
costguard-diagnostics = { path = "../costguard-diagnostics" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
costguard-scanner = { path = "../costguard-scanner" }
