[package]
name = "costguard-output"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
costguard-cost = { path = "../costguard-cost" }
costguard-core = { path = "../costguard-core" }
costguard-diagnostics = { path = "../costguard-diagnostics" }
costguard-protocol = { path = "../costguard-protocol" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
costguard-scanner = { path = "../costguard-scanner" }
