[package]
name = "costguard-policy"
description = "Signed policy compilation, verification, and enforcement for Costguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
costguard-diagnostics = { path = "../costguard-diagnostics" }
costguard-protocol = { path = "../costguard-protocol" }
ed25519-dalek.workspace = true
globset.workspace = true
rand_core.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true

