[package]
name = "costguard-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
costguard-dbt = { path = "../costguard-dbt" }
costguard-diagnostics = { path = "../costguard-diagnostics" }
costguard-platform = { path = "../costguard-platform" }
costguard-scanner = { path = "../costguard-scanner" }
costguard-sql = { path = "../costguard-sql" }
regex.workspace = true
serde.workspace = true
