[package]
name = "costguard-rules"
description = "SQLCOST rule implementations and registry for Costguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
costguard-dbt = { path = "../costguard-dbt" }
costguard-diagnostics = { path = "../costguard-diagnostics" }
costguard-platform = { path = "../costguard-platform" }
costguard-policy = { path = "../costguard-policy" }
costguard-scanner = { path = "../costguard-scanner" }
costguard-sql = { path = "../costguard-sql" }
regex.workspace = true
serde.workspace = true

[dev-dependencies]
costguard-protocol = { path = "../costguard-protocol" }
