[package]
name = "costguard-scanner"
description = "Project file discovery and classification for Costguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
costguard-diagnostics = { path = "../costguard-diagnostics" }
ignore.workspace = true
rayon.workspace = true
serde.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile.workspace = true
