[package]
name = "costguard-sql"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
costguard-dbt = { path = "../costguard-dbt" }
costguard-diagnostics = { path = "../costguard-diagnostics" }
costguard-platform = { path = "../costguard-platform" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlparser.workspace = true

[[bin]]
name = "audit-compiled-parse"
path = "src/bin/audit_compiled_parse.rs"
