[package]
name = "costguard-sql"
description = "SQL parsing and feature extraction for Costguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
costguard-dbt = { path = "../costguard-dbt" }
costguard-diagnostics = { path = "../costguard-diagnostics" }
costguard-platform = { path = "../costguard-platform" }
regex.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
sqlparser.workspace = true

[features]
audit-bin = ["serde_json"]

[[bin]]
name = "audit-compiled-parse"
path = "src/bin/audit_compiled_parse.rs"
required-features = ["audit-bin"]

[dev-dependencies]
costguard-dbt = { path = "../costguard-dbt" }
